# mwsat

./: README.md
jupyter/: sample.ipynb
mwsat/: CClause.cpp  CClause.h  CFormula.cpp  CFormula.h  CInstanceReader.cpp  CInstanceReader.h  CLiteral.cpp  CLiteral.h  CMakeLists.txt  COutputWriter.cpp  COutputWriter.h  CParameters.h  CSimulatedAnnealing.cpp  CSimulatedAnnealing.h  Doxyfile  Makefile  main.cpp
sa_mwsat/: CClause.h  CFormula.h  CInstanceReader.h  CLiteral.h  CMakeLists.txt  COutputWriter.h  CParameters.h  CSimulatedAnnealing.h  Makefile  main.cpp
sa_mwsat/data/white-box/wuf20-91R/wuf20-91R-Q/: wuf20-0964.mwcnf
